test/typechecker.d/invalid/poly1.surc.bad
f(x: forall A. B): B = x
